name: Hutton
version: 1.0
cabal-version: 1.11
build-type: Simple
license: PublicDomain
stability: experimental
synopsis: Exercises from Programming in Haskell
description:
    Exercises from Graham Hutton, Programming in Haskell, 2nd edition
category: Exercises
author: stefan.scheidt@icloud.com
x-ghc-framework-version: 7.10.3-6.29-1
x-last-ide-version: HfM1.4.0
Executable Hutton
  main-is: Main.hs
  buildable: True
  build-depends:
      base -any
  other-modules:
      CountdownProblem
      BitStringTransmit
      CaesarCipher
      TautologyChecker
      Hutton05
      Hutton01
      Hutton02
      Hutton06
      Hutton04
      AbstractMachine
      Hutton07
      Hutton08
