name: Hutton
version: 1.0
cabal-version: 1.11
build-type: Simple
license: PublicDomain
stability: experimental
synopsis: Exercises from Programming in Haskell
description:
    Exercises from Graham Hutton, Programming in Haskell, 2nd edition
category: Exercises
author: stefan.scheidt@icloud.com
x-ghc-framework-version: 8.0.2-8.9-3
x-last-ide-version: HfM1.5.0
Executable Hutton
  main-is: Main.hs
  buildable: True
  build-depends:
      base -any
  other-modules:
      BitStringTransmit
      Hutton02
      CaesarCipher
      AbstractMachine
      Hutton04
      CountdownProblem
      Hutton07
      Hutton05
      TautologyChecker
      Hangman
      Hutton06
      Hutton01
      Hutton08
